--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,8 @@ android_compileSdk=36
 android_targetSdk=36
 android_buildToolsVersion=36.0.0
 android_minSdk=26
+
+GKD_STORE_FILE = D\:\\AndroidKit\\quToolsFree.jks
+GKD_STORE_PASSWORD = #free0821%
+GKD_KEY_ALIAS = qufree
+GKD_KEY_PASSWORD = @yan0821$
